[package]
name = "cf-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
codeforces-api = "0.3.4"